# game_off_2023

./: Cargo.toml  index.html
assets/: analog_scale.blend  analog_scale.blend1  test.blend  test.blend1  test.glb  test.gltf
src/: main.rs  player.rs  setup_game.rs
